--- a/DataTransferLawler/Views/Home/Details.cshtml
+++ b/DataTransferLawler/Views/Home/Details.cshtml
@@ -19,7 +19,13 @@
                 <h4>Sport/Type: @Model.Country.Sport.Name</h4>
             </li>
             <li class="list-group-item">
-                <a asp-action="Index" asp-route-activeGame="@Model.ActiveGame" asp-route-activeSport="@Model.ActiveSport">Return to home</a>
+                <form asp-action="Add" method="post">
+                    <a asp-action="Index" asp-route-activeGame="@Model.ActiveGame" asp-route-activeSport="@Model.ActiveSport">Return to home</a>
+                    <button type="submit" class="btn btn-primary">
+                        Add to favorites
+                    </button>
+                    <input type="hidden" asp-for="Country.CountryID" />
+                </form>
             </li>
         </ul>
     </div>
