--- a/DataTransferLawler/Views/Shared/_Layout.cshtml
+++ b/DataTransferLawler/Views/Shared/_Layout.cshtml
@@ -12,6 +12,21 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DataTransferLawler</a>
+                @if (TempData["message"] != null)
+                {
+                    <h4 class="bg-success p-2">@TempData["message"]</h4>
+                }
+
+                @if (!ViewContext.View.Path.Contains("Favorites"))
+                {
+                    var session = new CountrySession(Context.Session);
+                    <h5 class="bg-info p-2">
+                        <a asp-controller="Favorites" class="text-white">Favorites</a>
+                        <span class="badge badge-light">
+                            @(session.GetMyCountryCount())
+                        </span>
+                    </h5>
+                }
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
